# assistant_bot

./: Dockerfile  Note.py  README.md  addressbook.py  assistantbot.py  contact_book.py  contact_generator.py  field.py  main.py  pyproject.toml  record.py  serialization.py  task_for_birthday.py  名称未設定ファイル.drawio
